K8s/poi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  labels:
    app: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registrywjl7126.azurecr.io/poi:0.0.1
        ports:
        - containerPort: 80
