K8s/poi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poi-svc
spec:
  selector:
    app: poi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
