K8s/poi/minimal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poi-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service:  
            name: poi-svc
            port:
              number: 80
